@@ -2,6 +2,7 @@
  1.18.1      ??/09/08 
                 Fix: Dreambox setup, password now not mandatory.
                 Fix: xTV skin wasnt showing pad buttons.
+                Fix: Hauppauge mins error.
                 Change: Pad buttons (A,B,X,Y etc) graphics much improved (thanks smuto).
                 Change: Some skin tweaks.
                 New: mediaStream skin (thanks smuto).
